fixed too small activities

--- a/src/components/Activity/Activity.css
+++ b/src/components/Activity/Activity.css
@@ -4,6 +4,7 @@
   /* border: solid 1px gray; */
   padding: 1em 0.5em;
   max-width: 480px;
+  width: 100%;
   box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.11);
 }
 
